--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </body>
 
 <footer>
-    www 🎲 App Brewery 🎲 com
+    www 🎲 App Brewery 🎲 com <br> JS created by Link Adkins Nadav
 </footer>
 
 </html>
