refactoring and commenting

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-
+    <!-- All HTML content is by "The App Brewary" and Angela Lu @ udemy.com -->
+    <!-- comments add by WebDev.Link for readabillity -->
     <div class="container">
         <h1>Refresh Me</h1>
 
